test/development/acceptance/__snapshots__/error-recovery.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox default syntax > runtime error 1`] = `
"index.js (6:16) @ Error

  4 | setInterval(() => {
  5 |   i++
> 6 |   throw Error('no ' + i)
    |        ^
  7 | }, 1000)
  8 | export default function FunctionNamed() {
  9 |   return <div />"
`;

exports[`ReactRefreshLogBox default syntax > runtime error 2`] = `
"./index.js
Error: 
  x Expected '}', got '<eof>'
   ,-[/private/var/folders/jm/n3311p411n5341x4p1wfj7z80000gn/T/next-install-f9a60cbfe36e2e8794631133bbfd1a7cafcdf5ded60251779cf555c651f5cb37/index.js:5:1]
 5 |           i++
 6 |           throw Error('no ' + i)
 7 |         }, 1000)
 8 |         export default function FunctionNamed() {
   :                                                 ^
   \`----

Caused by:
    Syntax Error

Import trace for requested module:
./index.js
./pages/index.js"
`;

exports[`ReactRefreshLogBox default syntax > runtime error 3`] = `
"./index.js
Error: 
  x Expected '}', got '<eof>'
   ,-[/private/var/folders/jm/n3311p411n5341x4p1wfj7z80000gn/T/next-install-f9a60cbfe36e2e8794631133bbfd1a7cafcdf5ded60251779cf555c651f5cb37/index.js:5:1]
 5 |           i++
 6 |           throw Error('no ' + i)
 7 |         }, 1000)
 8 |         export default function FunctionNamed() {
   :                                                 ^
   \`----

Caused by:
    Syntax Error

Import trace for requested module:
./index.js
./pages/index.js"
`;
